src/examples/test-doubles/ReturnValueMapExampleTest.php.out
./tools/phpunit tests/ReturnValueMapExampleTest.php
PHPUnit 10.0.19 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.2.6

E                                                                   1 / 1 (100%)

Time: 00:00.001, Memory: 14.31 MB

There was 1 error:

1) ReturnValueMapExampleTest::testReturnValueMapStub
PHPUnit\Framework\MockObject\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnValueMapExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
